sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:10: error: not found: value NbECh
  while (i+ecart < lgr || NbECh!=0){
                          ^